--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,24 @@
 ---
 
----
+// IMPORT LAYOUT COMPONENTS
+import Layout from "@/layouts/layout/index.astro"
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+// IMPORT COMMON COMPONENTS
+import Footer from "@/components/common/footer/index.astro"
+import Header from "@/components/common/header/index.astro"
+import HeaderBanner from "@/components/common/header-banner/index.astro"
+
+// HOME COMPONENTS
+import Home from "@/components/home/index.astro"
+
+---
+<Layout
+	description=""
+	image=""
+	title=""
+>
+	<HeaderBanner/>
+	<Header/>
+	<Home/>
+	<Footer/>
+</Layout>
