feat: created picture and link atoms

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,9 @@
 ---
 
-// IMPORT LAYOUT COMPONENTS
+// IMPORTS LAYOUT COMPONENTS
 import Layout from "@/layouts/layout/index.astro"
 
-// IMPORT COMMON COMPONENTS
-import Footer from "@/components/common/footer/index.astro"
-import Header from "@/components/common/header/index.astro"
-import HeaderBanner from "@/components/common/header-banner/index.astro"
-
-// HOME COMPONENTS
+// HOME COMPONENT
 import Home from "@/components/home/index.astro"
 
 ---
@@ -17,8 +12,5 @@ import Home from "@/components/home/index.astro"
 	image=""
 	title=""
 >
-	<HeaderBanner/>
-	<Header/>
 	<Home/>
-	<Footer/>
 </Layout>
