--- a/src/atoms/link/target-blank/index.astro
+++ b/src/atoms/link/target-blank/index.astro
@@ -9,6 +9,6 @@ const {
 } = Astro.props
 
 ---
-<a href={ href } aria-label={ aria_label } class="block">
+<a href={ href } aria-label={ aria_label } target="_blank" class="block">
     <slot/>
 </a>
