--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -1,11 +1,13 @@
 ---
 
-// IMPORTS COMMON COMPONENTS
+// IMPORTS ASTRO COMPONENTS
 import Footer from "@/components/common/footer/index.astro"
 import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
+import Hero from "@/components/home/hero/index.astro"
 
 ---
 <HeaderBanner />
 <Header />
+<Hero />
 <Footer />
