--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -5,9 +5,11 @@ import Footer from "@/components/common/footer/index.astro"
 import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
 import Hero from "@/components/home/hero/index.astro"
+import ResultsDrivenSeo from "@/components/home/results-driven-seo/index.astro"
 
 ---
 <HeaderBanner />
 <Header />
 <Hero />
+<ResultsDrivenSeo />
 <Footer />
