feat: created services component

--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -6,10 +6,12 @@ import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
 import Hero from "@/components/home/hero/index.astro"
 import ResultsDrivenSeo from "@/components/home/results-driven-seo/index.astro"
+import Services from "@/components/home/services/index.astro"
 
 ---
 <HeaderBanner />
 <Header />
 <Hero />
 <ResultsDrivenSeo />
+<Services />
 <Footer />
