--- a/src/atoms/heading/three/blue/index.astro
+++ b/src/atoms/heading/three/blue/index.astro
@@ -1,3 +1,3 @@
-<h3 class="text-sureoak_blue text-3xl font-commissioner font-light">
+<h3 class="text-sureoak_blue text-3xl font-commissioner">
     <slot/>
 </h3>
