feat: created seo game plan component

--- a/src/atoms/link/index.astro
+++ b/src/atoms/link/index.astro
@@ -9,6 +9,6 @@ const {
 } = Astro.props
 
 ---
-<a href={ href } aria-label={ aria_label } class="block">
+<a href={ "/" + href } aria-label={ aria_label } class="block">
     <slot/>
 </a>
