--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -6,6 +6,7 @@ import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
 import Hero from "@/components/home/hero/index.astro"
 import ResultsDrivenSeo from "@/components/home/results-driven-seo/index.astro"
+import SEOGamePlan from "@/components/home/seo-game-plan/index.astro"
 import Services from "@/components/home/services/index.astro"
 
 ---
@@ -14,4 +15,5 @@ import Services from "@/components/home/services/index.astro"
 <Hero />
 <ResultsDrivenSeo />
 <Services />
+<SEOGamePlan />
 <Footer />
