feat: created clients component

--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -1,6 +1,7 @@
 ---
 
 // IMPORTS ASTRO COMPONENTS
+import Clients from "@/components/home/clients/index.astro"
 import Footer from "@/components/common/footer/index.astro"
 import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
@@ -16,4 +17,5 @@ import Services from "@/components/home/services/index.astro"
 <ResultsDrivenSeo />
 <Services />
 <SEOGamePlan />
+<Clients />
 <Footer />
