feat: created testimonials component

--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -9,6 +9,7 @@ import Hero from "@/components/home/hero/index.astro"
 import ResultsDrivenSeo from "@/components/home/results-driven-seo/index.astro"
 import SEOGamePlan from "@/components/home/seo-game-plan/index.astro"
 import Services from "@/components/home/services/index.astro"
+import Testimonials from "@/components/home/testimonials/index.astro"
 
 ---
 <HeaderBanner />
@@ -18,4 +19,5 @@ import Services from "@/components/home/services/index.astro"
 <Services />
 <SEOGamePlan />
 <Clients />
+<Testimonials />
 <Footer />
