feat: created image banner component

--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -6,6 +6,7 @@ import Footer from "@/components/common/footer/index.astro"
 import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
 import Hero from "@/components/home/hero/index.astro"
+import ImageBanner from "@/components/home/image-banner/index.astro"
 import ResultsDrivenSeo from "@/components/home/results-driven-seo/index.astro"
 import SEOGamePlan from "@/components/home/seo-game-plan/index.astro"
 import Services from "@/components/home/services/index.astro"
@@ -20,4 +21,5 @@ import Testimonials from "@/components/home/testimonials/index.astro"
 <SEOGamePlan />
 <Clients />
 <Testimonials />
+<ImageBanner />
 <Footer />
