feat: created difference component

--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -11,6 +11,7 @@ import ResultsDrivenSeo from "@/components/home/results-driven-seo/index.astro"
 import SEOGamePlan from "@/components/home/seo-game-plan/index.astro"
 import Services from "@/components/home/services/index.astro"
 import Testimonials from "@/components/home/testimonials/index.astro"
+import Difference from "@/components/home/difference/index.astro"
 
 ---
 <HeaderBanner />
@@ -22,4 +23,5 @@ import Testimonials from "@/components/home/testimonials/index.astro"
 <Clients />
 <Testimonials />
 <ImageBanner />
+<Difference />
 <Footer />
