feat: added favicon in layout

--- a/src/components/home/schedule-a-session/index.astro
+++ b/src/components/home/schedule-a-session/index.astro
@@ -20,7 +20,7 @@ const data = {
 
 ---
 <Container>
-    <section class="flex flex-col gap-6 justify-center items-center py-14">
+    <section class="flex flex-col gap-6 justify-center items-center pb-14">
         <div class="bg-[#26739975] h-[1px] w-96 mb-4" />
         <Paragraph2XlBlue>{ data.description }</Paragraph2XlBlue>
         <HeadingTwoGreenCenter>{ data.title }</HeadingTwoGreenCenter>
