--- a/src/layouts/layout/index.astro
+++ b/src/layouts/layout/index.astro
@@ -36,9 +36,9 @@ const {
         <meta property="twitter:image" content={ image } />
         <meta property="twitter:image" content={ image } />
         <meta property="article:publisher" content="" />
-        <link rel="icon" href="">
+        <link rel="icon" href="/sureoak-favicon.png" />
     </head>
-    <body class="">
+    <body>
         <slot />
     </body>
 </html>
